remove gtk_frame_extents from window geometries

--under x11 environment remove the gtk_frame_extents that
are used for shadows under plasma environment

BUG:417856